# Robofest25

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  comms.org  deploy.sh  gui.sh  gui_docker.sh  gui_podman.sh  mesh.sh  pod.sh
.github/workflows/: image-publish.yml
Tools/: entrypoint.sh  internet_gateway.sh  update_router_config.py
docker/: Dockerfile
mavros/: Dockerfile  mod.bashrc  router_config.json5
workspace/: .gitignore  script.sh
workspace/VCA/2000MHz/: scan_ros-20-03-023131.csv  scan_ros-20-03-023308.csv  scan_ros-20-03-023327.csv  scan_ros-20-03-023344.csv  scan_ros-20-03-023424.csv  scan_ros-20-03-044915.csv  scan_ros-20-03-114755.csv  scan_ros-20-03-121306.csv
workspace/src/app_broadcast/: package.xml  setup.cfg  setup.py
workspace/src/app_broadcast/app_broadcast/: broadcast_fleet_state.py
workspace/src/human_tracking_controls/: CMakeLists.txt
workspace/src/human_tracking_controls/src/: mavros_yaw_body_tracking.cpp  (+2 more)
workspace/src/install/: local_setup.sh  setup.sh
workspace/src/ldlidar/: CMakeLists.txt
workspace/src/log/: latest_build
workspace/src/mine_detector/: CMakeLists.txt  package.xml
workspace/src/my_drone_bringup/: package.xml  setup.cfg  setup.py
workspace/src/object_tracker/: setup.py
workspace/src/px4_minco_trajectory_planner_ros2_package/: CMakeLists.txt  binary_map_log.txt  gcopter_traj.csv  grid_path_log.csv  package.xml  plot_logs.py  sfc_constraints.txt
workspace/src/swarm/: package.xml  setup.py
workspace/src/swarm_cpp/: CMakeLists.txt  package.xml
zenoh/: router_config.json5
(+84 files in other folders)
